Fabulous new web interface! Graphs no longer overlap at certain window sizes. Data point for "original" program is slightly larger. Examples spread out horizontally. Changed "Luts" to "LUT count", and "Latency" to "Latency (cycles)" if that's correct -- do feel free to revert that bit if incorrect. I also thought it would be nice to have a textual description of each test that appears when one clicks on its name.

--- a/www/css/plot.css
+++ b/www/css/plot.css
@@ -1,13 +1,13 @@
-body {
-    font: 11px sans-serif;
-    margin-bottom: 200px;
-}
 
 .axis path,
 .axis line {
     fill: none;
     stroke: #000;
     shape-rendering: crispEdges;
+}
+
+.axis text {
+    font: 11px sans-serif;
 }
 
 .dot {
